--- a/index.html
+++ b/index.html
@@ -2,12 +2,8 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no,viewport-fit=cover">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="format-detection" content="telephone=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
   <title>晋城市领导驾驶舱</title>
 </head>
 
@@ -16,32 +12,12 @@
   <!-- built files will be auto injected -->
 </body>
 <style>
-  body {
-
-    /* position: fixed;
-
-    top: 0;
-
-    left: 0; */
-
-    width: 100%;
-    overflow-x: hidden;
-    height: 100%;
-    /* overflow:auto; */
+ body {
+    font-family: "Microsoft YaHei";
+    /* font-size:37.5px; */
+    /* font-weight:200; */
   }
 
-  ::-webkit-scrollbar {
-     width: 0 !important;
-   }
-   ::-webkit-scrollbar {
-     width: 0 !important;height: 0;
-   }
-
-  /* html {
-
-    overflow: hidden;
-
-  } */
 </style>
 
 </html>
